--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v7.1.0/css/all.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
   　
   <meta charset="UTF-8">
   　<title>社会保険労務士法人そら</title>
@@ -167,3 +167,4 @@
 </body>
 
 </html>
+
