--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v7.1.0/css/all.css">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="style.css">
   　
   <meta charset="UTF-8">
   　<title>社会保険労務士法人そら</title>
@@ -51,7 +51,7 @@
           </div>
 
           <div class="contents-blk">
-            <li><a href="index company.html">料金表</a></li>
+            <li><a href="index price.html">料金表</a></li>
           </div>
           　
           <div class="contents-blk">
@@ -62,9 +62,10 @@
 
         
           　<div class="contents-blk">
-            <li><a href="index company.html">採用情報</a></li>
+            <li><a href="index Job Information.html">採用情報</a></li>
 
           </div>
+
           <div class="contents-blk">
          <li><a href="index company.html">お客様の声</a></li>
    
@@ -167,4 +168,3 @@
 </body>
 
 </html>
-
