--- a/index price.html
+++ b/index price.html
@@ -49,12 +49,14 @@ margin: 0 auto;
       <h2>サービス　</h2><a href="index Services .html">サービス</a>
     </div> 　
     <div class="contents-blk">
+
       <h2>会社紹介(代表挨拶／事務所案内)</h2><a href="index company.html">会社紹介(代表挨拶／事務所案内)</a>
     </div>
     <div class="contents-blk">
-      <h2>料金表</h2><a href="index company.html">料金表</a>
+      <h2>料金表</h2><a href="index price.html">料金表</a>
     </div>　
     <div class="contents-blk">
+      
       <h2>お問い合わせ</h2>
     </div>　
     　<div class="contents-blk">
@@ -65,39 +67,45 @@ margin: 0 auto;
     </div>
 </section>
     　
-    </div>
-</head>
+
   </header>
 
   <section>
+    
     <div class="Mission Statement">
-      <h2> 【企業理念】</h2>
-      <h3>『No Smile, No Life !』</h3>
-      <p>一つ、私たちは関係するすべての人々から「信頼」される存在であり続ける為、
-        常に「思いやり」を持って行動します。</p>
-      <p>一つ、私たちは人と人との「和」を大切にし、楽しく、働きがいのある会社を目指します。</p>
-      <p>一つ、私たちは地域社会の活性化を目指します。</p>
-      ※ 「信頼」 とは 信じて頼りにすること<br>
-      ※ 「思いやり」 とは その人の身になって考えること<br>
-      ※ 「和」 とは 仲よくすること。互いに相手を大切にし、協力し合う関係にあること。<br>
-    </div>
-    <div class="Vision">
-      <h2>【2030年ビジョン】</h2>
-      <h3>「月曜日がワクワクする、みんなが集まる楽しい、笑顔溢れる企業」</h3>
-      <p>1. 自分たちの考えたオシャレな企業である</p>
-      <p>2. お客様に愛されて成長し続ける企業である</p>
-      <p>3. 残業がなく、休日がしっかりとれる企業である</p>
-      <p> 4. 給与、賞与と業界水準を超えている企業である</p>
-      <p>5. 社員の夢が叶う企業である</p>
-      <p>6. 社員とその家族が活き活きし、誇りが持てる企業である</p>
-      <p> 7. 社会に貢献している企業である</p>
+
+
+ 　　【月額顧問料金】
+
+<h1>1. スタンダードプラン</h1>
+　【労務相談】
+労務相談のみのプランです。
+
+
+
+<h1>2. ビジネスプラン</h1>
+【労務相談＋社会保険手続き】
+一番多く利用されているプランです。
+
+
+<h1>3. プレミアムプラン</h1>
+【労務相談＋社会保険手続き＋給与計算フォロー】給与計算のフォローもサービスに含まれます。
+<li>※注　給与計算の代行ではございません。</li>
+弊所指定の給与計算ソフトをご利用いただき、顧問先様・弊所双方でチェックいたします。
+
+
+<li>＊2ビジネスプラン、3プレミアムプランの手続きは原則電子申請にて行っており、公文書等は電子データでの提供となります。</li>
+
+
+
+
     </div>
 
 
 
 
   </section>
-
+</head>
 
 
 </body>
