--- a/index TOP.html
+++ b/index TOP.html
@@ -64,7 +64,7 @@ margin: 0 auto;
      <h2>お客様の声</h2> 
     </div>
 </section>
-    　
+
   </header>
 
   <section>
@@ -96,39 +96,55 @@ margin: 0 auto;
 
   </section>
 
+<footer>
+  <h1 class="logo"></h1>
+  <span class="icon-logo"></span>
+  <div class="wrap-blk"></div>
 
+  <p>社会保険労務士法人そら</p>
+
+
+  <ul>
+
+    <li><a href="tel:0522129386"><i class="fa-solid fa-phone"></i>052-212-9386</a></li>
+ 
+  </ul>
+
+  <nav class="header-nav">
+    <div class="two">
+      <ul>
+        <span class="red">
+          <li><a href="#"><i class="fa-solid fa-location-dot"></i>アクセス</a></li>
+          <li><i class="fa-regular fa-envelope"></i><a href="#">お問い合わせ</a></li>
+
+          <li>
+            <p><a href="https://www.instagram.com/soragroup.2023/"> <i class="fa-brands fa-instagram"></i>
+                Instagram (社会保険労務士法人 そら)</p>
+        
+
+
+          <li>
+            <p><a href="https://www.instagram.com/sora_plus.00/"> 
+            <i class="fa-brands fa-instagram"></i>
+                Instagram (株式会社Sora Plus)</p>
+          </li>
+
+  </nav>
+
+  
+
+
+  <p>〒460-0008</p>
+  <p>愛知県名古屋市中区栄１丁目１３−４ みその大林ビル 3F A </p>
+  </div>
+</main>
+
+
+
+</footer>
 
 </body>
 
 </div>
 
 </html>
-
-
-
-【社会保険労務士法人そら】
-📞052-212-9386
-
-<div class="two">
-  <ul>
-    <span class="red">
-      <li><a href="#">アクセス</a></li>
-      <li><a href="#">お問い合わせ</a></li>
-
-      <li>
-        <p><a href="https://www.instagram.com/soragroup.2023/">社会保険労務士法人 そら ☞instagram</p>
-      </li>
-
-
-      <li>
-        <p><a href="https://www.instagram.com/sora_plus.00/"> 株式会社Sora Plus ☞instagram </p>
-      </li>
-
-
-      </a></a></li>
-    </span>
-</div>
-</ul>
-
-〒460-0008
-<p>愛知県名古屋市中区栄１丁目１３−４ みその大林ビル 3F A </p>
